rename to "Business Cards

--- a/mobile/src/i18n/personal-leads.mobile.en-US.json
+++ b/mobile/src/i18n/personal-leads.mobile.en-US.json
@@ -1,5 +1,5 @@
 {
-  "personal_leads": "Personal Leads",
+  "personal_leads": "Business Cards",
   "alert": "Are you sure you want to remove \"${name}\" from your connections?",
   "confirm": "Confirm",
   "cancel": "Cancel",
