--- a/mobile/src/i18n/personal-leads.mobile.en-US.json
+++ b/mobile/src/i18n/personal-leads.mobile.en-US.json
@@ -17,6 +17,6 @@
   "scan": "Scan Info",
   "exit": "Exit",
   "close": "Close",
-  "notes": "Notes"
-
+  "notes": "Notes",
+  "startConvo": "Start a Conversation"
 }
