--- a/mobile/src/i18n/en-us/personal-leads.mobile.json
+++ b/mobile/src/i18n/en-us/personal-leads.mobile.json
@@ -18,5 +18,7 @@
   "exit": "Exit",
   "close": "Close",
   "notes": "Notes",
-  "startConvo": "Start a Conversation"
+  "startConvo": "Start a Conversation",
+  "error": "Unable to Read",
+  "newScan": "Please scan a different code"
 }
