--- a/mobile/src/i18n/en-us/personal-leads.mobile.json
+++ b/mobile/src/i18n/en-us/personal-leads.mobile.json
@@ -20,5 +20,6 @@
   "notes": "Notes",
   "startConvo": "Start a Conversation",
   "error": "Unable to Read",
-  "newScan": "Please scan a different code"
+  "newScan": "Please scan a different code",
+  "error_connecting": "Error connecting to database",
 }
