Share on Scan option

--- a/mobile/src/i18n/en-us/personal-leads.mobile.json
+++ b/mobile/src/i18n/en-us/personal-leads.mobile.json
@@ -16,6 +16,7 @@
   "share": "Share My Info",
   "scan": "Scan Info",
   "exit": "Exit",
+  "share_on_scan": "Share my info at the time of scan",
   "close": "Close",
   "notes": "Notes",
   "startConvo": "Start a Conversation",
