fix AsyncStorage edge cases and race conditions

--- a/mobile/src/i18n/en-us/personal-leads.mobile.json
+++ b/mobile/src/i18n/en-us/personal-leads.mobile.json
@@ -21,6 +21,7 @@
   "notes": "Notes",
   "startConvo": "Start a Conversation",
   "error": "Unable to Read",
+  "alreadyScanned": "Attendee already scanned",
   "newScan": "Please scan a different code",
   "error_connecting": "Error connecting to database",
   "search": "Search"
